--- a/99鸣谢.md
+++ b/99鸣谢.md
@@ -2,6 +2,7 @@
 | ------ | ------- |
 |        | 杨锦涛     |
 |        | 杨晨宇     |
+|        | 徐思婕     |
 |        | 陈雨航     |
 |        | 俞玥      |
 |        | 田竹仝     |
