--- a/02落地事项.md
+++ b/02落地事项.md
@@ -1,1 +1,9 @@
+落地后，需要办理的各事项及其前提条件如下：
+
+| 事项               | 事项内容                                                                                     | 前提条件                 | 推荐时间                                         |
+| ---------------- | ---------------------------------------------------------------------------------------- | -------------------- | -------------------------------------------- |
+| Swisspass交通卡     | 1. 一张临时的证明（立刻收到）&#xA;2\. 一张Swisspass交通实体卡（数周后邮寄）&#xA;3\. 收到实体卡后可自行在SBB Mobile App上登记为电子卡 | 护照，居住地址或c/o地址用于邮寄实体卡 | 入境落地后可立刻办理，可以先办月卡，便于乘坐交通。否则每次出行都需要单独买票，费用很高。 |
+| Prepaid电话卡（学联福利） | 1. Prepaid实体电话卡或esim&#xA;2\. 只有Prepaid实体卡才能享受学联福利，esim卡无法享受                              | 护照，新生身份              |                                              |
+|                  |                                                                                          |                      |                                              |
+
 ^
