--- a/02落地事项.md
+++ b/02落地事项.md
@@ -1,9 +1,13 @@
 落地后，需要办理的各事项及其前提条件如下：
 
-| 事项               | 前提条件                 | 事项内容                                                                                     | 推荐时间                                 |
+| 事项               | 前提条件                 | 事项内容                                                                                     | 推荐办理时间                               |
 | ---------------- | -------------------- | ---------------------------------------------------------------------------------------- | ------------------------------------ |
 | Swisspass交通卡     | 护照，居住地址或c/o地址用于邮寄实体卡 | 1. 一张临时的证明（立刻收到）&#xA;2\. 一张Swisspass交通实体卡（数周后邮寄）&#xA;3\. 收到实体卡后可自行在SBB Mobile App上登记为电子卡 | 入境落地后可立刻办理，便于乘坐交通。否则每次出行都需要单独买票，费用很高 |
-| Prepaid电话卡（学联福利） | 护照，新生身份证明文件（任一）      | 1. Prepaid实体电话卡或esim卡&#xA;2\. 只有Prepaid实体卡才能享受学联福利，esim卡无法享受                             | 可根据落地时间提前预约办卡时间                      |
+| Prepaid电话卡（学联福利） | 护照，任一新生身份证明文件        | 1. Prepaid实体电话卡或esim卡&#xA;2\. 只有Prepaid实体卡才能享受学联福利，esim卡无法享受                             | 可根据落地时间提前在小程序预约办卡时间                  |
 | 学校注册             | 护照                   | 1. 学生卡（Legi）&#xA;2\. 学期注册证明（Immatrikulationsbestätigung/Enrolment confirmation）          | 落地后尽快办理，请注意查看学校窗口的开放时间               |
+| 租房               | 护照                   | 1. 租房合同&#xA;2\. 房间现状检查确认清单                                                               | 找到房后                                 |
+| Kreisbüro报到      | 护照，租房合同，学期注册证明       | 1. 核实信息后发放登记确认（Meldebestätigung）&#xA;2\. 预约                                              |                                      |
+|                  |                      |                                                                                          |                                      |
+|                  |                      |                                                                                          |                                      |
 
 ^
