--- a/02落地事项.md
+++ b/02落地事项.md
@@ -6,7 +6,7 @@
 | Prepaid电话卡（学联福利） | 护照，任一新生身份证明文件        | 1. Prepaid实体电话卡或esim卡&#xA;2\. 只有Prepaid实体卡才能享受学联福利，esim卡无法享受                             | 可根据落地时间提前在小程序预约办卡时间                  |
 | 学校注册             | 护照                   | 1. 学生卡（Legi）&#xA;2\. 学期注册证明（Immatrikulationsbestätigung/Enrolment confirmation）          | 落地后尽快办理，请注意查看学校窗口的开放时间               |
 | 租房               | 护照                   | 1. 租房合同&#xA;2\. 房间现状检查确认清单                                                               | 找到房后                                 |
-| Kreisbüro报到      | 护照，租房合同，学期注册证明       | 1. 核实信息后发放登记确认（Meldebestätigung）&#xA;2\. 预约                                              |                                      |
+| Kreisbüro报到      | 护照，租房合同，学期注册证明       | 1. 核实信息后发放登记确认（Meldebestätigung），这张纸请保存好避免丢失&#xA;2\. 预约移民局录指纹的日期和时间                      | 拿到学期注册证明和租房合同后                       |
 |                  |                      |                                                                                          |                                      |
 |                  |                      |                                                                                          |                                      |
 
