--- a/02落地事项.md
+++ b/02落地事项.md
@@ -9,7 +9,7 @@
 | Kreisbüro报到      | 护照，租房合同，学期注册证明，手机号                                           | 1. 核实信息后发放登记确认（Meldebestätigung），这张纸请保存好避免丢失&#xA;2\. 预约移民局录指纹的日期和时间                      | 拿到学期注册证明和租房合同后                       |
 | 瑞士银行卡            | 护照，Meldebestätigung，Enrolment confirmation，手机号               | 1. 合同文件&#xA;2\. 储蓄卡&#xA;3\. Prepaid卡或信用卡                                                 | 完成学校注册+租房+Kreisbüro报到后               |
 | 保险及豁免            | 护照，Meldebestätigung，Enrolment confirmation，手机号，（推荐瑞士银行卡便于缴费） | 办理学生保险并申请豁免                                                                              | 完成学校注册+租房+Kreisbüro报到后+（银行卡办理后）      |
-| 移民局录指纹           | 护照，Meldebestätigung                                          | 1. 录指纹&#xA;2\. 等待邮寄正式permit/Aufenthalstbewilligung                                       |                                      |
-|                  |                                                              |                                                                                          |                                      |
+| 移民局录指纹           | 护照，Meldebestätigung                                          | 1. 录指纹&#xA;2\. 等待邮寄正式permit / Aufenthalstbewilligung                                     | 严格遵守预约时间前往                           |
+| Postpaid电话卡      | 护照，Meldebestätigung，学生卡                                      | 1. Postpaid实体电话卡（携号转卡）&#xA;2\. 或Postpaid esim卡                                           | 最早在办理Prepaid一个月后可转卡                  |
 
 ^
