--- a/02落地事项.md
+++ b/02落地事项.md
@@ -10,6 +10,6 @@
 | 瑞士银行卡             | 护照，Meldebestätigung，Enrolment confirmation，手机号               | 1. 合同文件&#xA;2\. 储蓄卡&#xA;3\. Prepaid卡或信用卡                                                 | 完成学校注册+租房+Kreisbüro报到后               |
 | 保险及豁免（学联福利）       | 护照，Meldebestätigung，Enrolment confirmation，手机号，（推荐瑞士银行卡便于缴费） | 办理学生保险并申请豁免                                                                              | 完成学校注册+租房+Kreisbüro报到后+（银行卡办理后）      |
 | 移民局录指纹            | 护照，Meldebestätigung                                          | 1. 录指纹&#xA;2\. 等待邮寄正式permit / Aufenthalstbewilligung                                     | 严格遵守预约时间前往                           |
-| Postpaid电话卡（学联福利） | 护照，Meldebestätigung，学生卡                                      | 1. Postpaid实体电话卡（携号转卡）&#xA;2\. 或Postpaid esim卡                                           | 最早在办理Prepaid一个月后可转卡                  |
+| Postpaid电话卡（学联福利） | 护照，Meldebestätigung，学生卡                                      | 1. Postpaid实体电话卡（携号转卡）&#xA;2\. 或Postpaid esim卡                                           | 最早在办理 Prepaid 30天后可预约转卡              |
 
 ^
