--- a/02落地事项.md
+++ b/02落地事项.md
@@ -1,15 +1,15 @@
 落地后，需要办理的各事项及其前提条件如下：
 
-| 事项                | 前提条件                                                         | 事项内容                                                                                     | 推荐办理时间                                                                                                               |
-| ----------------- | ------------------------------------------------------------ | ---------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------- |
-| Swisspass交通卡      | 护照，本人证件照，居住地址或c/o地址用于邮寄实体卡                                   | 1. 一张临时的证明（立刻收到）&#xA;2\. 一张Swisspass交通实体卡（数周后邮寄）&#xA;3\. 收到实体卡后可自行在SBB Mobile App上登记为电子卡 | 入境落地后可立刻办理，便于乘坐交通。否则每次出行都需要单独买票，费用很高                                                                                 |
-| Prepaid电话卡（学联福利）  | 护照，任一新生身份证明文件                                                | 1. Prepaid实体电话卡或esim卡&#xA;2\. 只有Prepaid实体卡才能享受学联福利，esim卡无法享受                             | 可根据落地时间提前在小程序预约办卡时间                                                                                                  |
-| 学校注册              | 护照                                                           | 1. 学生卡（Legi）&#xA;2\. 学期注册证明（Immatrikulationsbestätigung/Enrolment confirmation）          | 落地后尽快办理，请注意查看学校窗口的开放时间                                                                                               |
-| 租房                | 护照                                                           | 1. 租房合同&#xA;2\. 房间现状检查确认清单                                                               | 找到房后                                                                                                                 |
-| Kreisbüro报到       | 护照，租房合同，Enrolment confirmation，手机号                           | 1. 核实信息后发放登记确认 Meldebestätigung，这张纸请保存好避免丢失&#xA;2\. 预约移民局录指纹的日期和时间                       | 拿到Enrolment confirmation和租房合同后                                                                                       |
-| 瑞士银行卡             | 护照，Meldebestätigung，Enrolment confirmation，手机号               | 1. 合同文件&#xA;2\. 储蓄卡&#xA;3\. Prepaid卡或信用卡                                                 | 完成学校注册+租房+Kreisbüro报到后                                                                                               |
-| 保险及豁免（学联福利）       | 护照，Meldebestätigung，Enrolment confirmation，手机号，（推荐瑞士银行卡便于缴费） | 办理学生保险并申请豁免                                                                              | 完成学校注册+租房+Kreisbüro报到后+（银行卡办理后）                                                                                      |
-| 移民局录指纹            | 护照，Meldebestätigung                                          | 1. 录指纹&#xA;2\. 等待邮寄正式permit / Aufenthalstbewilligung                                     | 严格遵守预约时间前往                                                                                                           |
-| Postpaid电话卡（学联福利） | 护照，Meldebestätigung，学生卡                                      | 1. Postpaid实体电话卡（携号转卡）&#xA;2\. 或Postpaid esim卡                                           | 如果办理了Prepaid卡，最早在办理 Prepaid 30天后可携号转卡，30天内可以办Postpaid卡但无法使用原号码；&#xA;&#xA;或之前先用自己的流量支撑一段时间，在Kreisbüro报到后直接来办理Postpaid |
+| 事项                | 前提条件                                                                       | 事项内容                                                                                     | 推荐办理时间                                                                                                               |
+| ----------------- | -------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------- |
+| Swisspass交通卡      | 护照&#xA;本人证件照&#xA;居住地址或c/o地址用于邮寄实体卡                                         | 1. 一张临时的证明（立刻收到）&#xA;2\. 一张Swisspass交通实体卡（数周后邮寄）&#xA;3\. 收到实体卡后可自行在SBB Mobile App上登记为电子卡 | 入境落地后可立刻办理，便于乘坐交通。否则每次出行都需要单独买票，费用很高                                                                                 |
+| Prepaid电话卡（学联福利）  | 护照&#xA;任一新生身份证明文件                                                          | 1. Prepaid实体电话卡或esim卡&#xA;2\. 只有Prepaid实体卡才能享受学联福利，esim卡无法享受                             | 可根据落地时间提前在小程序预约办卡时间                                                                                                  |
+| 学校注册              | 护照                                                                         | 1. 学生卡（Legi）&#xA;2\. 学期注册证明（Immatrikulationsbestätigung/Enrolment confirmation）          | 落地后尽快办理，请注意查看学校窗口的开放时间                                                                                               |
+| 租房                | 护照                                                                         | 1. 租房合同&#xA;2\. 房间现状检查确认清单                                                               | 找到房后                                                                                                                 |
+| Kreisbüro报到       | 护照&#xA;租房合同&#xA;Enrolment confirmation&#xA;手机号                             | 1. 核实信息后发放登记确认 Meldebestätigung，这张纸请保存好避免丢失&#xA;2\. 预约移民局录指纹的日期和时间                       | 拿到Enrolment confirmation和租房合同后                                                                                       |
+| 瑞士银行卡             | 护照&#xA;Meldebestätigung&#xA;Enrolment confirmation&#xA;手机号                 | 1. 合同文件&#xA;2\. 储蓄卡&#xA;3\. Prepaid卡或信用卡                                                 | 完成学校注册+租房+Kreisbüro报到后                                                                                               |
+| 保险及豁免（学联福利）       | 护照&#xA;Meldebestätigung&#xA;Enrolment confirmation&#xA;手机号&#xA;（瑞士银行卡便于缴费） | 办理学生保险并申请豁免                                                                              | 完成学校注册+租房+Kreisbüro报到后+（银行卡办理后）                                                                                      |
+| 移民局录指纹            | 护照&#xA;Meldebestätigung                                                    | 1. 录指纹&#xA;2\. 等待邮寄正式permit / Aufenthalstbewilligung                                     | 严格遵守预约时间前往                                                                                                           |
+| Postpaid电话卡（学联福利） | 护照&#xA;Meldebestätigung&#xA;学生卡                                            | 1. Postpaid实体电话卡（携号转卡）&#xA;2\. 或Postpaid esim卡                                           | 如果办理了Prepaid卡，最早在办理 Prepaid 30天后可携号转卡，30天内可以办Postpaid卡但无法使用原号码；&#xA;&#xA;或之前先用自己的流量支撑一段时间，在Kreisbüro报到后直接来办理Postpaid |
 
 ^
