--- a/02落地事项.md
+++ b/02落地事项.md
@@ -2,7 +2,7 @@
 
 | 事项                | 前提条件                                                                       | 事项内容                                                                                     | 推荐办理时间                                                                                                               |
 | ----------------- | -------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------- |
-| Swisspass交通卡      | 护照&#xA;本人证件照&#xA;居住地址或c/o地址用于邮寄实体卡                                         | 1. 一张临时的证明（立刻收到）&#xA;2\. 一张Swisspass交通实体卡（数周后邮寄）&#xA;3\. 收到实体卡后可自行在SBB Mobile App上登记为电子卡 | 入境落地后可立刻办理，便于乘坐交通。否则每次出行都需要单独买票，费用很高                                                                                 |
+| Swisspass交通卡      | 护照&#xA;本人证件照&#xA;居住地址或c/o地址用于邮寄实体卡                                         | 1. 一张临时的证明（立刻收到）&#xA;2\. 一张Swisspass交通实体卡（数周后邮寄）&#xA;3\. 收到实体卡后可自行在SBB Mobile App上登记为电子卡 | 入境落地后可立刻办理，便于乘坐交通&#xA;&#xA;否则每次出行都需要单独买票，费用很高                                                                        |
 | Prepaid电话卡（学联福利）  | 护照&#xA;任一新生身份证明文件                                                          | 1. Prepaid实体电话卡或esim卡&#xA;2\. 只有Prepaid实体卡才能享受学联福利，esim卡无法享受                             | 可根据落地时间提前在小程序预约办卡时间                                                                                                  |
 | 学校注册              | 护照                                                                         | 1. 学生卡（Legi）&#xA;2\. Enrolment confirmation / Immatrikulationsbestätigung                | 可提前邮寄，或落地后尽快办理，请注意查看学校窗口的开放时间                                                                                        |
 | 租房                | 护照                                                                         | 1. 租房合同&#xA;2\. 房间现状检查确认清单                                                               | 找到房后                                                                                                                 |
