--- a/02落地事项.md
+++ b/02落地事项.md
@@ -9,7 +9,7 @@
 | Kreisbüro报到       | 护照&#xA;租房合同&#xA;Enrolment confirmation&#xA;手机号                             | 1. 核实信息后发放登记确认 Meldebestätigung，这张纸请保存好避免丢失&#xA;2\. 预约移民局录指纹的日期和时间                       | 拿到Enrolment confirmation和租房合同后                                                                                       |
 | 瑞士银行卡             | 护照&#xA;Meldebestätigung&#xA;Enrolment confirmation&#xA;手机号                 | 1. 合同文件&#xA;2\. 储蓄卡&#xA;3\. Prepaid卡或信用卡                                                 | 完成学校注册+租房+Kreisbüro报到后                                                                                               |
 | 保险及豁免（学联福利）       | 护照&#xA;Meldebestätigung&#xA;Enrolment confirmation&#xA;手机号&#xA;（瑞士银行卡便于缴费） | 办理学生保险并申请豁免                                                                              | 完成学校注册+租房+Kreisbüro报到后+（银行卡办理后）                                                                                      |
-| 移民局录指纹            | 护照&#xA;Meldebestätigung&#xA;居住地址用于邮寄实体卡                                    | 1. 录指纹&#xA;2\. 等待邮寄正式permit / Aufenthalstbewilligung                                     | 严格遵守预约时间前往                                                                                                           |
+| 移民局录指纹            | 护照&#xA;Meldebestätigung&#xA;居住地址用于邮寄实体卡                                    | 1. 录指纹&#xA;2\. 等待邮寄正式permit / Aufenthaltstitel                                           | 严格遵守预约时间前往                                                                                                           |
 | Postpaid电话卡（学联福利） | 护照&#xA;Meldebestätigung&#xA;学生卡                                            | 1. Postpaid实体电话卡（携号转卡）&#xA;2\. 或Postpaid esim卡                                           | 如果办理了Prepaid卡，最早在办理 Prepaid 30天后可携号转卡，30天内可以办Postpaid卡但无法使用原号码；&#xA;&#xA;或之前先用自己的流量支撑一段时间，在Kreisbüro报到后直接来办理Postpaid |
 
 ^
