--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -1,7 +1,7 @@
 :-: ![](.topwrite/assets/20171031_ACSSZ_Logo_01.png =390)
 
-:-: **欢迎来到2023年新生在线答疑会**！
+:-: **欢迎参加2023年苏黎世新生在线答疑会**！
 
 ^
 
-:-: **苏黎世学联**
+:-: **苏黎世中国学生学者联合会ACSSZ**
