--- a/26瑞士银行卡.md
+++ b/26瑞士银行卡.md
@@ -27,3 +27,6 @@ PostFinance:
 <https://www.postfinance.ch/en/private/products/interest-rates.html>
 ZKB：
 <https://www.zkb.ch/de/private/konten-karten/pakete-jugendliche-studierende/zkb-student.html>
+特别鸣谢：
+周睿：<https://zhuanlan.zhihu.com/p/168781846>
+马贤哲
