--- a/26瑞士银行卡.md
+++ b/26瑞士银行卡.md
@@ -23,25 +23,34 @@
 Yuh：账户无月费。可免费得到实体卡（Yuh Mastercard）。每月**一次免费取现**。**国外取现4.9瑞法一次**。**欧洲内部其它货币转账4瑞法一次**。储蓄利息：25000瑞法/欧元/美元以下：0.75%，25000瑞法/欧元/美元以上：0.5%。据说它的欧元卡比较推荐，似乎比Revolut稳定一些。
 N26：**不支持瑞法**。有两种账户，Standard无月费，Smart月费4.9欧元。主要区别在于Smart账户必然包含实体卡，Standard可选（可能需要付**运费**）。都包含virtual debit MasterCard。Standard每月**免费取现3次**，Smart5次。**每天转账限额2500欧元，每月20000欧元。每天取现限额2500欧元，每月20000欧元**。可免费在欧洲内部用欧元转账。向欧洲以外其它地区转账用的是Wise的服务，**手续费在0.5%-1.5%这个范围内**。
 
-来源：
-UBS: <https://www.ubs.com/ch/en/private/accounts-and-cards/bundles/students.html>
-<https://www.ubs.com/ch/en/help/debitcard/cards-difference.html>
-PostFinance:
-<https://www.postfinance.ch/en/private/needs/welcome/banking-package/banking-packages-for-young-people-and-students.html>
-<https://www.postfinance.ch/en/support/services/tools-calculator/currency-converter.html#/>
-<https://www.postfinance.ch/en/private/products/interest-rates.html>
-ZKB：
-<https://www.zkb.ch/de/private/konten-karten/pakete-jugendliche-studierende/zkb-student.html>
-Revolut:
-<https://www.revolut.com/a-radically-better-account/>
-<https://www.revolut.com/our-pricing-plans/>
-<https://swissneobanks.ch/app/revolut-switzerland#account-opening-with-revolut-switzerland-and8211-1010>
-Yuh:
-<https://www.yuh.com/en/pricing>
-<https://www.yuh.com/en/support/faq>
-N26：
-<https://n26.com/en-ch/plans>
-<https://swissneobanks.ch/app/n26-switzerland#n26-switzerland-credit-card-and8211-510>
-特别鸣谢：
-周睿：<https://zhuanlan.zhihu.com/p/168781846>
-马贤哲
+^
+
+> 来源：
+> UBS:&#x20;
+>
+> <https://www.ubs.com/ch/en/private/accounts-and-cards/bundles/students.html>
+> <https://www.ubs.com/ch/en/help/debitcard/cards-difference.html>
+>
+> PostFinance:
+> <https://www.postfinance.ch/en/private/needs/welcome/banking-package/banking-packages-for-young-people-and-students.html>
+> <https://www.postfinance.ch/en/support/services/tools-calculator/currency-converter.html#/>
+> <https://www.postfinance.ch/en/private/products/interest-rates.html>
+>
+> ZKB：
+> <https://www.zkb.ch/de/private/konten-karten/pakete-jugendliche-studierende/zkb-student.html>
+>
+> Revolut:
+> <https://www.revolut.com/a-radically-better-account/>
+> <https://www.revolut.com/our-pricing-plans/>
+> <https://swissneobanks.ch/app/revolut-switzerland#account-opening-with-revolut-switzerland-and8211-1010>
+> Yuh:
+> <https://www.yuh.com/en/pricing>
+> <https://www.yuh.com/en/support/faq>
+> N26：
+> <https://n26.com/en-ch/plans>
+> <https://swissneobanks.ch/app/n26-switzerland#n26-switzerland-credit-card-and8211-510>
+> 特别鸣谢：
+> 周睿：<https://zhuanlan.zhihu.com/p/168781846>
+> 马贤哲
+
+^
