--- a/05提问.md
+++ b/05提问.md
@@ -1,11 +1,12 @@
-**自由提问环节**
+#### **自由提问环节**
 
-请**开麦**或**发送会议室聊天消息**提问
+请**开麦**或**发送zoom消息**提问
 
 ^
 ^
-^
+
+#### 欢迎加入2023苏黎世新生群
 
 ![](.topwrite/assets/6401.png =353)
 
-欢迎加入2023苏黎世新生群
+^
