--- a/02落地事项.md
+++ b/02落地事项.md
@@ -1,3 +1,29 @@
+a. 行李丢失
+
+1\.  出发前在行李上做好明显标记（如系彩色丝带等），并在行李牌上写清楚自己的名字、邮箱等联系方式。
+
+2\. 落地后，在行李转盘寻找后确定没有找到自己的行李，及时联系机场工作人员。机场工作人员会带你去行李丢失处寻找，那里有很多没人认领的箱子。
+
+3\. 如果在行李丢失处没有找到箱子，直接联系机场工作人员告知你的情况。他们会询问你丢失箱子的相关信息，一定要尽可能详细地告诉他们行李箱的模样（如：颜色、材质、尺寸、标记等）。登记完成后，工作人员会让你留下联系方式和住宿地址。
+
+（1）联系方式：如果你没有瑞士当地手机号，可以留下在瑞士学长学姐或者朋友的手机号，并且告诉工作人员这是你朋友的联系方式，此外最好留下个人常用邮箱。
+
+（2）住宿地址：租到房子的同学，直接留房子地址；未租到房子的同学，可留下酒店/民宿等你暂时过渡的地址，并告知机场工作人员。
+
+登记完成后，工作人员会给你一张单子，上面有行李丢失编号，以及机场的行李丢失官网和联系方式。务必保存好这张单子。
+
+4\. 建议不要等机场给你打电话。在工作日时间可以给机场打电话询问行李情况，也可以在官网查看行李情况。如果打电话时行李已找到，建议最好不要让他们邮寄，时间允许的话立马去机场取行李（带上单子、机票、护照）。邮寄会比较慢，2-3天甚至更久才会收到。
+
+5\. 一般行李会在7天左右找到，如果在5天后仍没有找到，建议联系第一程/第二程航空公司询问行李是否已经转运到第二程/第三程飞机上，并与他们核对行李牌编号。如果出现行李箱上的行李牌编号和单子上行李牌编号不一致，请及时告知最后一程飞机的航空公司（有时候会出现转机飞机的工作人员输错行李编号的情况）。
+
+\* 丢失行李后一定要积极给航空公司打电话询问行李情况。
+
+\* 最好自己及时去机场取行李，不要邮寄。
+
+\* 尽量在短时间内解决该事。
+
+^
+
 落地后，需要办理的各事项：
 
 | 事项                | 前提条件                                                                       | 事项内容                                                                                     | 推荐办理时间                                                                                   |
@@ -11,5 +37,31 @@
 | 保险及豁免（学联福利）       | 护照&#xA;Meldebestätigung&#xA;Enrolment confirmation&#xA;手机号&#xA;（瑞士银行卡便于缴费） | 办理学生保险并申请豁免                                                                              | 完成学校注册+租房+Kreisbüro报到后+（银行卡办理后）                                                          |
 | Postpaid电话卡（学联福利） | 护照&#xA;Meldebestätigung&#xA;学生卡                                            | 1. Postpaid实体电话卡（携号转卡）&#xA;2\. 或Postpaid esim卡                                           | 如果办理了Prepaid卡，最早在办理 Prepaid 30天后可携号转卡；&#xA;&#xA;或先用自己的流量撑一段时间，在Kreisbüro报到后直接来办理Postpaid |
 | 移民局录指纹            | 护照&#xA;Meldebestätigung&#xA;居住地址用于邮寄实体卡                                    | 1. 录指纹&#xA;2\. 等待邮寄正式permit / Aufenthaltstitel                                           | 严格遵守预约时间前往                                                                               |
+
+^
+
+d. 找房租房
+
+&#x20;i. 临时过渡住所
+
+&#x20;  1\. 酒店。酒店价格会比较高，适合极短期（一周内）。
+
+&#x20;  2\. 民宿。性价比会更高，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼，价格会比较优惠。
+
+&#x20;  3\. 学长学姐/朋友家。
+
+&#x20;  4\. 群里的短租。自行甄别筛选。
+
+ii. 找房途径和渠道
+
+| 途径/渠道      | 简介                                                             | 优点                                                   | 缺点                                                   | 链接                                                              |
+| ---------- | -------------------------------------------------------------- | ---------------------------------------------------- | ---------------------------------------------------- | --------------------------------------------------------------- |
+| WOKO       |                                                                | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                    | 1. 竞争激烈&#xA;2\. 大多需提早起租&#xA;3\. 多人共享公共区域（如厨房、浴室等）    | <https://www.woko.ch>                                           |
+| JUWO       | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年。                  | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 适合28岁以下的同学 | 1. 竞争激烈&#xA;2\. 等待时间长&#xA;                           | <https://www.juwo.ch>                                           |
+| WFSS       | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。 |                                                      |                                                      | <https://www.wfss.ch/de/>                                       |
+| 学校推荐网站     |                                                                | 1. 房源丰富&#xA;2\. 价格相对合理&#xA;3\. 相对可靠                  | 1. 有时会有租房骗子&#xA;2\. 很多房东只会德语&#xA;3\. 回复缓慢            | <https://wohnen.ethz.ch/index.php?act=searchoffer>              |
+| ST-JUSTIN  |                                                                | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化                 | 1. 竞争激烈&#xA;2\. 秋季需4.15就申请&#xA;3\. 多人共享公共区域（如厨房、浴室等） | <https://www.justinus.ch/en/zurich/accueil/index.html>日后会更新新的网站 |
+| INTERMEZZO |                                                                |                                                      |                                                      |                                                                 |
+| 群内转租       |                                                                | 1. 中国人之间转租，沟通方便                                      |                                                      |                                                                 |
 
 ^
