--- a/24找房租房.md
+++ b/24找房租房.md
@@ -1,1 +1,26 @@
+d. 找房租房
+
+i. 临时过渡住所
+
+1\. 酒店。酒店价格会比较高，适合极短期（一周内）。
+
+2\. 民宿。性价比会更高，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼，价格会比较优惠。
+
+3\. 学长学姐/朋友家。
+
+4\. 群里的短租。自行甄别筛选。
+
+ii. 找房途径和渠道
+
+|            |                                                                |                                       |                                            |                                                                 |
+| ---------- | -------------------------------------------------------------- | ------------------------------------- | ------------------------------------------ | --------------------------------------------------------------- |
+| 途径/渠道      | 简介                                                             | 优点                                    | 缺点                                         | 链接                                                              |
+| WOKO       |                                                                | 1. 价格优惠 2. 无需收入证明 3. 可靠               | 1. 竞争激烈 2. 大多需提早起租 3. 多人共享公共区域（如厨房、浴室等）    | <https://www.woko.ch>                                           |
+| JUWO       | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年。                  | 1. 价格优惠 2. 无需收入证明 3. 可靠 4. 适合28岁以下的同学 | 1. 竞争激烈 2. 等待时间长                           | <https://www.juwo.ch>                                           |
+| WFSS       | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。 |                                       |                                            | <https://www.wfss.ch/de/>                                       |
+| 学校推荐网站     |                                                                | 1. 房源丰富 2. 价格相对合理 3. 相对可靠             | 1. 有时会有租房骗子 2. 很多房东只会德语 3. 回复缓慢            | <https://wohnen.ethz.ch/index.php?act=searchoffer>              |
+| ST-JUSTIN  |                                                                | 1. 价格优惠 2. 无需收入证明 3. 国籍多样化            | 1. 竞争激烈 2. 秋季需4.15就申请 3. 多人共享公共区域（如厨房、浴室等） | <https://www.justinus.ch/en/zurich/accueil/index.html日后会更新新的网站> |
+| INTERMEZZO |                                                                |                                       |                                            |                                                                 |
+| 群内转租       |                                                                | 1. 中国人之间转租，沟通方便                       |                                            |                                                                 |
+
 ^
