--- a/24找房租房.md
+++ b/24找房租房.md
@@ -10,17 +10,52 @@ i. 临时过渡住所
 
 4\. 群里的短租。自行甄别筛选。
 
-ii. 找房途径和渠道
+^
 
-|            |                                                                |                                       |                                            |                                                                 |
-| ---------- | -------------------------------------------------------------- | ------------------------------------- | ------------------------------------------ | --------------------------------------------------------------- |
-| 途径/渠道      | 简介                                                             | 优点                                    | 缺点                                         | 链接                                                              |
-| WOKO       |                                                                | 1. 价格优惠 2. 无需收入证明 3. 可靠               | 1. 竞争激烈 2. 大多需提早起租 3. 多人共享公共区域（如厨房、浴室等）    | <https://www.woko.ch>                                           |
-| JUWO       | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年。                  | 1. 价格优惠 2. 无需收入证明 3. 可靠 4. 适合28岁以下的同学 | 1. 竞争激烈 2. 等待时间长                           | <https://www.juwo.ch>                                           |
-| WFSS       | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。 |                                       |                                            | <https://www.wfss.ch/de/>                                       |
-| 学校推荐网站     |                                                                | 1. 房源丰富 2. 价格相对合理 3. 相对可靠             | 1. 有时会有租房骗子 2. 很多房东只会德语 3. 回复缓慢            | <https://wohnen.ethz.ch/index.php?act=searchoffer>              |
-| ST-JUSTIN  |                                                                | 1. 价格优惠 2. 无需收入证明 3. 国籍多样化            | 1. 竞争激烈 2. 秋季需4.15就申请 3. 多人共享公共区域（如厨房、浴室等） | <https://www.justinus.ch/en/zurich/accueil/index.html日后会更新新的网站> |
-| INTERMEZZO |                                                                |                                       |                                            |                                                                 |
-| 群内转租       |                                                                | 1. 中国人之间转租，沟通方便                       |                                            |                                                                 |
+ii. 租房步骤
 
+&#x20;1\. 网上自行筛选合适自己的房子（网站见下文）。尽早开始，结合自身情况考虑价格、距离、起租日期等因素。
+
+&#x20;2\. 发邮件，海投（最好写一个cover letter 介绍自己，比如经历、背景、爱好、生活习惯（爱干净，安静），努力争取线下看房机会）数量在30到上百封都有可能，这个比较看运气（7、8、9月为找房旺季）。woko、juwo这类机构房源则是填表，等待联系。
+
+&#x20;3\. 如果获得机会看房并对房子满意，签写租房意向书。建议线下看房的时候多和房东聊天争取好感，从众多看房者中脱颖而出，房东才有可能把房子租给你。租房给谁基本全凭房东喜好决定，偶尔会有房子是按照先到先得的顺序给的。
+
+&#x20;4\. 等待房东回复
+
+（资料来源：学联论坛）
+
+^
+
+iii. 找房途径和渠道
+
+&#x20;1\. 常见渠道
+
+| 途径/渠道           | 简介                                                             | 优点                                                                     | 缺点                                                     | 链接                                                              |
+| --------------- | -------------------------------------------------------------- | ---------------------------------------------------------------------- | ------------------------------------------------------ | --------------------------------------------------------------- |
+| Student Village | ETH学生宿舍                                                        | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具&#xA;5\. 在Hönggerberg校区 | 1. 竞争激烈&#xA;2\. 多人共享公共区域                               | <https://studentvillage.ch/en/>                                 |
+| WOKO            | 苏黎世学生租房网站                                                      | 1. 价格优惠&#xA;2\. 无需收入证明 &#xA;3\. 可靠&#xA;4\. 有基本家具                       | 1. 竞争激烈 &#xA;2\. 大多需提早起租 3. 多人共享公共区域（如厨房、浴室等）          | <https://www.woko.ch>                                           |
+| JUWO            | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年。                  | 1. 价格优惠 &#xA;2\. 无需收入证明 &#xA;3\. 可靠 &#xA;4\. 适合28岁以下的同学                | 1. 竞争激烈 &#xA;2\. 等待时间长&#xA;3\. 没有家具                    | <https://www.juwo.ch>                                           |
+| WFSS            | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                      | 1. 竞争激烈&#xA;2\. 多人共享公共区域                               | <https://www.wfss.ch/de/>                                       |
+| 学校推荐网站          | 大多是当地居民和中介发布的租房信息。                                             | 1. 房源丰富 &#xA;2\. 价格相对合理 &#xA;3\. 相对可靠                                  | 1. 有时会有租房骗子 &#xA;2\. 很多房东只会德语 &#xA;3\. 回复缓慢            | <https://wohnen.ethz.ch/index.php?act=searchoffer>              |
+| ST-JUSTIN       | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间。 | 1. 价格优惠 &#xA;2\. 无需收入证明 &#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里         | 1. 竞争激烈 &#xA;2\. 秋季需4.15就申请 &#xA;3\. 多人共享公共区域（如厨房、浴室等） | <https://www.justinus.ch/en/zurich/accueil/index.html日后会更新新的网站> |
+| INTERMEZZO      | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司，有中国留学生在此实习。              | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                  | 桑伊依同学（vx号：Evesang2022）                                          |
+| 群内转租            |                                                                | 1. 中国人之间转租，沟通方便                                                        | 1. 价格区间波动范围大&#xA;2\. 需甄别真实性                            |                                                                 |
+
+2\. 其他渠道
+[www.wg.zimmer.ch ](http://www.wg.zimmer.ch )
+[www.wg-gesucht.de ](http://www.wg-gesucht.de )
+
+（WG是德语Wohngemeinschaft的缩写，译为 共用公寓/合租房）
+<https://flatfox.ch/c/en/>
+<http://www.marktplatz.uzh.ch/Biete/wohnungen> <http://www.students.ch/wohnen/list> 
+<https://wohnen.ethz.ch/index.php?act=searchoffer>
+<https://en.comparis.ch/immobilien/search>
+<http://www.ronorp.net/zuerich/dach-ueber-dem-kopf>
+瑞士华人论坛上租房信息：
+[www.swissant.com](http://www.swissant.com)
+forum.swissinfo.ch
+
+<https://forum.acssz.org/d/386>
+
+^
 ^
