--- a/24找房租房.md
+++ b/24找房租房.md
@@ -30,16 +30,16 @@ iii. 找房途径和渠道
 
 &#x20;1\. 常见渠道
 
-| 途径/渠道           | 简介                                                             | 优点                                                                     | 缺点                                                     | 链接                                                              |
-| --------------- | -------------------------------------------------------------- | ---------------------------------------------------------------------- | ------------------------------------------------------ | --------------------------------------------------------------- |
-| Student Village | ETH学生宿舍                                                        | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具&#xA;5\. 在Hönggerberg校区 | 1. 竞争激烈&#xA;2\. 多人共享公共区域                               | <https://studentvillage.ch/en/>                                 |
-| WOKO            | 苏黎世学生租房网站                                                      | 1. 价格优惠&#xA;2\. 无需收入证明 &#xA;3\. 可靠&#xA;4\. 有基本家具                       | 1. 竞争激烈 &#xA;2\. 大多需提早起租 3. 多人共享公共区域（如厨房、浴室等）          | <https://www.woko.ch>                                           |
-| JUWO            | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年。                  | 1. 价格优惠 &#xA;2\. 无需收入证明 &#xA;3\. 可靠 &#xA;4\. 适合28岁以下的同学                | 1. 竞争激烈 &#xA;2\. 等待时间长&#xA;3\. 没有家具                    | <https://www.juwo.ch>                                           |
-| WFSS            | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                      | 1. 竞争激烈&#xA;2\. 多人共享公共区域                               | <https://www.wfss.ch/de/>                                       |
-| 学校推荐网站          | 大多是当地居民和中介发布的租房信息。                                             | 1. 房源丰富 &#xA;2\. 价格相对合理 &#xA;3\. 相对可靠                                  | 1. 有时会有租房骗子 &#xA;2\. 很多房东只会德语 &#xA;3\. 回复缓慢            | <https://wohnen.ethz.ch/index.php?act=searchoffer>              |
-| ST-JUSTIN       | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间。 | 1. 价格优惠 &#xA;2\. 无需收入证明 &#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里         | 1. 竞争激烈 &#xA;2\. 秋季需4.15就申请 &#xA;3\. 多人共享公共区域（如厨房、浴室等） | <https://www.justinus.ch/en/zurich/accueil/index.html日后会更新新的网站> |
-| INTERMEZZO      | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司，有中国留学生在此实习。              | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                  | 桑伊依同学（vx号：Evesang2022）                                          |
-| 群内转租            |                                                                | 1. 中国人之间转租，沟通方便                                                        | 1. 价格区间波动范围大&#xA;2\. 需甄别真实性                            |                                                                 |
+| 途径/渠道           | 简介                                                             | 优点                                                                     | 缺点                                                   | 链接                                                              |
+| --------------- | -------------------------------------------------------------- | ---------------------------------------------------------------------- | ---------------------------------------------------- | --------------------------------------------------------------- |
+| Student Village | ETH学生宿舍                                                        | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具&#xA;5\. 在Hönggerberg校区 | 1. 竞争激烈&#xA;2\. 多人共享公共区域                             | <https://studentvillage.ch/en/>                                 |
+| WOKO            | 苏黎世学生租房网站                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具                        | 1. 竞争激烈&#xA;2\. 大多需提早起租 3. 多人共享公共区域（如厨房、浴室等）         | <https://www.woko.ch>                                           |
+| JUWO            | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年。                  | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 适合28岁以下的同学                   | 1. 竞争激烈&#xA;2\. 等待时间长&#xA;3\. 没有家具                   | <https://www.juwo.ch>                                           |
+| WFSS            | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                      | 1. 竞争激烈&#xA;2\. 多人共享公共区域                             | <https://www.wfss.ch/de/>                                       |
+| 学校推荐网站          | 大多是当地居民和中介发布的租房信息。                                             | 1. 房源丰富&#xA;2\. 价格相对合理&#xA;3\. 相对可靠                                    | 1. 有时会有租房骗子&#xA;2\. 很多房东只会德语&#xA;3\. 回复缓慢            | <https://wohnen.ethz.ch/index.php?act=searchoffer>              |
+| ST-JUSTIN       | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间。 | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里           | 1. 竞争激烈&#xA;2\. 秋季需4.15就申请&#xA;3\. 多人共享公共区域（如厨房、浴室等） | <https://www.justinus.ch/en/zurich/accueil/index.html日后会更新新的网站> |
+| INTERMEZZO      | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司，有中国留学生在此实习。              | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                 | 1. 竞争激烈（由其是8/9月）&#xA;                                | 桑伊依同学（vx号：Evesang2022）                                          |
+| 群内转租            |                                                                | 1. 中国人之间转租，沟通方便                                                        | 1. 价格区间波动范围大&#xA;2\. 需甄别真实性                          |                                                                 |
 
 2\. 其他渠道
 [www.wg.zimmer.ch ](http://www.wg.zimmer.ch )
@@ -56,6 +56,30 @@ iii. 找房途径和渠道
 forum.swissinfo.ch
 
 <https://forum.acssz.org/d/386>
+
+^
+
+iv. 租房注意事项
+
+&#x20;1\. 所租房子是否可注册地址。
+
+&#x20;2\. 尽量租在110区。
+
+&#x20;3\. 确认房费是否包含水电网暖气电视等费用，是否含有家具，是否需要承接家具。如果不包含家具，可在IKEA添置，或在群里收二手，或在家附近捡一些居民不用的家具。不要被没有家具劝退，自己在宜家置办家具也是不错的选择，详情可自行参考ikea网站https\://www\.ikea.com/ch/en/。
+
+&#x20;4\. 押金最好交到公用账户，若是私人账户，需谨慎。
+
+&#x20;5\. 尽量选择线下签合同，线上签合同需谨慎。
+
+&#x20;6\. 提前与房东敲定交钥匙时间。
+
+&#x20;7\. 入住时，将房屋内破损处全部拍照留档，并告知房东，以免退租时出现不必要的纠纷。
+
+&#x20;8\. 尽量选择能够长租的房子，搬家真的很麻烦！若是短租，需谨慎。
+
+&#x20;9\. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26,400CHF，每月要多交100CHF。
+
+&#x20;10\. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大。
 
 ^
 ^
