--- a/24找房租房.md
+++ b/24找房租房.md
@@ -1,6 +1,6 @@
 d. 找房租房
 
-i. 临时过渡住所
+**i**. **临时过渡住所**
 
 1\. 酒店。酒店价格会比较高，适合极短期（一周内）。
 
@@ -12,9 +12,9 @@ i. 临时过渡住所
 
 ^
 
-ii. 租房步骤
+**ii. 租房步骤**
 
-&#x20;1\. 网上自行筛选合适自己的房子（网站见下文）。尽早开始，结合自身情况考虑价格、距离、起租日期等因素。
+&#x20;1\. 网上自行筛选合适自己的房子（网站见iii. 找房途径和渠道）。尽早开始，结合自身情况考虑价格、距离、起租日期等因素。
 
 &#x20;2\. 发邮件，海投（最好写一个cover letter 介绍自己，比如经历、背景、爱好、生活习惯（爱干净，安静），努力争取线下看房机会）数量在30到上百封都有可能，这个比较看运气（7、8、9月为找房旺季）。woko、juwo这类机构房源则是填表，等待联系。
 
@@ -26,7 +26,7 @@ ii. 租房步骤
 
 ^
 
-iii. 找房途径和渠道
+**iii. 找房途径和渠道**
 
 &#x20;1\. 常见渠道
 
@@ -59,7 +59,7 @@ forum.swissinfo.ch
 
 ^
 
-iv. 租房注意事项
+**iv. 租房注意事项**
 
 &#x20;1\. 所租房子是否可注册地址。
 
