--- a/24找房租房.md
+++ b/24找房租房.md
@@ -82,4 +82,11 @@ forum.swissinfo.ch
 &#x20;10\. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大。
 
 ^
+
+**v. 什么是注册地址**
+
+在瑞士，所有的居民都必须在联邦注册办公室（BFS）注册，并拥有一个官方的注册地址。这也适用于租房的学生或外国人。租赁合同必须注册在联邦注册办公室，同时，学生或外国人需要提供注册地址以便签订租赁合同。此外，瑞士政府会向所有注册的居民寄送重要文件，例如纳税申报表、医疗保险等。没有官方注册地址将会导致这些文件无法收到，也可能导致法律问题。因此，在苏黎世租房，有一个注册地址是非常重要的。
+
+^
+^
 ^
