--- a/32医疗相关.md
+++ b/32医疗相关.md
@@ -2,7 +2,35 @@ i. 就医
 
 &#x20;1\. 医院
 
+&#x20;   （1） Universitätsspital Zürich (University Hospital of Zürich)
+
+&#x20;             地址：Rämistrasse 100, 8091 Zürich （就在ETH主校对面）此外还有很多分院区。
+
+&#x20;             挂号方式：
+
+&#x20;                \-- 在线挂号：可以在苏黎世大学医院的网站(<https://www.usz.ch>)上进行在线挂号，需要提供个人信息和就诊需求，然后选择一个合适的时间进行预约。
+
+&#x20;               \-- 电话挂号：可以通过拨打苏黎世大学医院的预约电话进行挂号。预约电话号码是：+41 44 255 11 11。需提供您的个人信息和就诊需求，然后选择一个合适时间进行预约。
+
+&#x20;              \-- 现场挂号：如果需要立即就诊或在线预约不方便，也可以前往苏黎世大学医院的前台或医院门诊部门进行现场挂号。需携带健康保险证件和个人身份证明。
+
+&#x20;             就诊时务必提前准备好个人信息、健康保险证件、个人身份证明和就诊需求。
+
+&#x20;             该医院涵盖了内科、外科、妇产科、神经科、心脏科、肿瘤科等在内的多个科室。但通常看病不太去医院，更多是去诊所或者家庭医生。
+
+&#x20;  （2） 苏黎世市立医院（Zurich City Hospital）、苏黎世克利尼克（Klinik Hirslanden）、爱德华医院苏黎世（Klinik Im Park）、安瑞斯医院苏黎世（Klinik Andreas）等。
+
 &#x20;2\. 普通诊所
+
+&#x20;（1） 预约。Onedoc 网站即可预约<https://www.onedoc.ch/en/>。有线上、线下两种看病方式。
+
+&#x20;（2）需选择医生类别，以及就诊地点。
+
+&#x20;   常见医生类别：General Practitioner(GP) 全科医生，Ophthalmologist 眼科医生，Dermatologist 皮肤科医生，D enlist 牙医等。如果不知道选，可选全科医生。
+
+&#x20;（3）选择（2）中内容后，就会展示各个医生可行时间，按步骤进行预约，填写相关信息即可。
+
+^
 
 &#x20;3\. 线上就医
 
@@ -10,4 +38,6 @@ ii. 买药
 
 iii. 急诊
 
-iv. 保险
+iv. 疫苗
+
+v. 保险
