--- a/32医疗相关.md
+++ b/32医疗相关.md
@@ -30,14 +30,70 @@ i. 就医
 
 &#x20;（3）选择（2）中内容后，就会展示各个医生可行时间，按步骤进行预约，填写相关信息即可。
 
-^
+&#x20;（4）就医前提前准备好个人信息、健康保险证件、个人身份证明和就诊需求。如果有些病情不太会描述，提前翻译好，方便沟通。
+
+&#x20;（5）若就诊时，保险卡还没有办下来，但已经在保险公司购买了相关保险。可以自己先垫付，让诊所工作人员给你费用单，之后交给保险公司即可。
 
 &#x20;3\. 线上就医
 
+Medgate。直接下载Medgate手机APP，填写相关信息，即可线上就诊。也可以拨打电话就诊[0900 11 44 11](<tel:0900 11 44 11>)。急诊前先准备好个人信息、健康保险证件、个人身份证明和就诊需求。
+
+\* 注：Medgate服务仅限于Group Mutuel保险客户。
+
+\* 注：这边就医具体报销情况，需要根据自己所购买的保险决定。
+
+^
+
 ii. 买药
+
+街上店铺带有绿色“十”字，并写有“Apotheke"的都是药店。药店买药大多需要医生的处方，没有处方的话很多药都不能买。如果有了医生的处方，带着处方和保险卡就可以买药。这边大部分常见药品都是可以报销的，具体需要看所购买的保险种类。
+
+\*注：这边医生开的处方是有“保质期”的，比如说2023/04/01-2023/07/01，意味着只能在这个时间段内购买该处方上的药。因为很多药物都需要报销，药店是要把处方寄给保险公司的，所以如果你需要在“保质期“内反复购药，一定要记得让工作人员帮你复印一份处方。
+
+^
+
+苏黎世24小时药店：Bellevue Apotheke。地址：Theaterstrasse 14, 8001 Zürich
+
+苏黎世365天开门的非24小时药店：
+
+Amavita Bahnhof Apotheke, Wannerhalle, Museumstrasse 1, 8001 Zürich
+
+Bahnhofapotheke Oerlikon, Bahnhof Oerlikon, Hofwiesenstrasse 369, 8050 Zürich
+
+^
 
 iii. 急诊
 
+ETH主校对面的Universitätsspital Zürich (University Hospital of Zürich) 就可以急诊。急诊入口不在大门处，需要从边上绕过去。就诊时务必提前准备好个人信息、健康保险证件、个人身份证明和就诊需求。
+
+如果没有特别紧急的情况，建议少去急诊，这边急诊比较慢。
+
+^
+
 iv. 疫苗
 
+UZH在central的诊所可以预约打疫苗，如TBE（蜱虫疫苗），FLU，HPV。
+
+（1） 预约链接：<https://reisemedizin.uzh.ch/en/book_appointment>
+
+（2） 地址：Hirschengraben 84, 8001 Zürich
+
+（3）流程：网上预约-->第一次去只需带护照和保险卡，后面需要带护照、保险卡和疫苗小本本（医生会给你的）--> 按时赴约，签到，医生会给你号码牌-->叫到号后，打针，医生会问你一些个人身体状况的问题，需如实回答-->打完针后，有些疫苗需要先付款，然后把费用单给保险公司再报销，有些可以直接报销。
+
+\* 注：具体疫苗报销情况，需要根据自己所购买的保险决定。
+
+^
+
 v. 保险
+
+1\. Swisscare
+
+2\. Group Mutuel
+
+"Group Mutuel"是一家瑞士的健康保险公司，提供广泛的健康保险计划，包括基本健康保险、牙科保险、旅行保险等。此外，该公司还提供其他相关服务，如在线健康咨询、健康风险评估等。
+
+（1） 地址：Widdergasse 1, 8001 Zürich
+
+（2）保险种类
+
+^
