--- a/32医疗相关.md
+++ b/32医疗相关.md
@@ -86,6 +86,10 @@ UZH在central的诊所可以预约打疫苗，如TBE（蜱虫疫苗），FLU，H
 
 v. 保险
 
+（资料来源：各个保险公司官网，以及<https://ethz.ch/en/studies/international/after-arrival/health-insurance/nicht-eu.html>）
+
+^
+
 1\. Swisscare
 
 2\. Group Mutuel
@@ -94,6 +98,26 @@ v. 保险
 
 （1） 地址：Widdergasse 1, 8001 Zürich
 
-（2）保险种类
+（2）保险种类及价格
 
-^
+以下都是Academic Care
+
+| 25岁以下 | annual deductible | 价格（CHF/月） |
+| ----- | ----------------- | --------- |
+|       | 500               | 100       |
+|       | 100               | 115       |
+|       | 0                 | 120       |
+
+| 25岁以上 | annual deductible | 价格（CHF/月） |
+| ----- | ----------------- | --------- |
+|       | 500               | 185       |
+|       | 100               | 205       |
+|       | 0                 | 210       |
+
+\* annual deductible：看病满多少钱可以报销。如：annual deductible为500CHF，即一年看病累积费用达500CHF，大于500CHF的可以报销。若annual deductible为0CHF，则可以全报。（大多看病费用都可以报，但牙医等费用是不能报销的）
+
+（3）购买方式
+
+&#x20;   \-- 线下购买。直接跟工作人员说你的需求，他们会介绍适合你的产品，然后让你填表。方便快捷。
+
+&#x20;   \-- 线上购买。链接：<https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/non-eu.html#par_textimage_1480546543>
