--- a/32医疗相关.md
+++ b/32医疗相关.md
@@ -88,7 +88,7 @@ v. 保险
 
 （资料来源：各个保险公司官网，以及<https://ethz.ch/en/studies/international/after-arrival/health-insurance/nicht-eu.html>）
 
-^
+![](.topwrite/assets/保险.jpeg)
 
 1\. Swisscare
 
@@ -102,22 +102,50 @@ v. 保险
 
 以下都是Academic Care
 
-| 25岁以下 | annual deductible | 价格（CHF/月） |
+| 25岁以下 | Annual deductible | 价格（CHF/月） |
 | ----- | ----------------- | --------- |
 |       | 500               | 100       |
 |       | 100               | 115       |
 |       | 0                 | 120       |
 
-| 25岁以上 | annual deductible | 价格（CHF/月） |
+| 25岁以上 | Annual deductible | 价格（CHF/月） |
 | ----- | ----------------- | --------- |
 |       | 500               | 185       |
 |       | 100               | 205       |
 |       | 0                 | 210       |
 
-\* annual deductible：看病满多少钱可以报销。如：annual deductible为500CHF，即一年看病累积费用达500CHF，大于500CHF的可以报销。若annual deductible为0CHF，则可以全报。（大多看病费用都可以报，但牙医等费用是不能报销的）
+\* Annual deductible：看病满多少钱可以报销。如：Annual deductible为500CHF，即一年看病累积费用达500CHF，大于500CHF的可以报销。若Annual deductible为0CHF，则可以全报。（大多看病费用都可以报，但牙医等一些费用是不能报销的）
 
 （3）购买方式
 
 &#x20;   \-- 线下购买。直接跟工作人员说你的需求，他们会介绍适合你的产品，然后让你填表。方便快捷。
 
 &#x20;   \-- 线上购买。链接：<https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/non-eu.html#par_textimage_1480546543>
+
+3\. 保险豁免
+
+瑞士政府规定所有在瑞士居住的人都必须购买基本健康保险，包括留学生在内。留学生需在到达苏黎世的三个月内购买保险，如果不买保险会被强制上险，即收到巨额保单。因为上述保险不符合Federal Health Insurance Act (KVG)，只符合"Federal Insurance Contract Act" (VVG) law。因此，在购买上述保险后，你必须申请保险豁免。
+
+（1）全部流程：申请到临时permit后，尽快到保险公司购买保险-->给政府部门邮寄相关证明，该证明可让保险公司工作人员协助完成-->收到来自政府的豁免信文件，豁免成功
+
+（2）豁免流程 （参考：<https://zhuanlan.zhihu.com/p/579456081?utm_source=wechat_session&utm_medium=social&s_r=0&utm_id=0>）
+
+&#x20;   \-- 政府网站填写豁免申请地址
+
+<https://www.zh.ch/en/gesundheit/krankenversicherung/kvg-befreiungsgesuch.html>
+
+可参考UZH国际处制作的豁免申请填写表
+
+<https://www.int.uzh.ch/dam/jcr:875a718d-973e-46ee-b5a7-c02c0b3df048/Instructions_Exemption.pdf>
+
+居留卡类型可参考
+
+<https://www.swissinfo.ch/chi/外国人在瑞士的身份及居留证件/718996>
+
+&#x20;   \-- 完成豁免申请。正常情况下，若提交完整材料后，数小时即可获批；若长期为收到批准，请直接联系相关部门。
+
+^
+
+大致流程如上，可能会因为保险公司不同而有出入。若有豁免相关问题，可直接联系保险公司以及政府相关部门，请他们协助解决。
+
+^
