--- a/32医疗相关.md
+++ b/32医疗相关.md
@@ -1,5 +1,7 @@
 i. 就医
 
+详细信息可参考UZH制作的就医指南：[Health Issues – What to Do In case of a serious emergencyuzh.chhttps://www.isc.uzh.ch › dam › 220502\_Health...](https://www.google.com.hk/url?sa=t\&rct=j\&q=\&esrc=s\&source=web\&cd=\&ved=2ahUKEwjDnPXp5aH-AhWj8bsIHfkGAYUQFnoECB0QAQ\&url=https%3A%2F%2Fwww.isc.uzh.ch%2Fdam%2Fjcr%3Ae0c199ed-bdd3-47cc-9cd8-c3e0af116883%2F220502_Health_Issues_information.pdf\&usg=AOvVaw0dXA179G83Fyeh3DLc3Bm9)
+
 &#x20;1\. 医院
 
 &#x20;   （1） Universitätsspital Zürich (University Hospital of Zürich)
@@ -18,7 +20,13 @@ i. 就医
 
 &#x20;             该医院涵盖了内科、外科、妇产科、神经科、心脏科、肿瘤科等在内的多个科室。但通常看病不太去医院，更多是去诊所或者家庭医生。
 
-&#x20;  （2） 苏黎世市立医院（Zurich City Hospital）、苏黎世克利尼克（Klinik Hirslanden）、爱德华医院苏黎世（Klinik Im Park）、安瑞斯医院苏黎世（Klinik Andreas）等。
+&#x20;  (2) 其他公立医院：Triemli Hospital--<https://www.stadt-zuerich.ch/triemli/en/index.html>
+
+Waid Hospital--<https://www.stadt-zuerich.ch/waid.html>
+
+University Children’s Hospital--<https://www.kispi.uzh.ch>
+
+University Eye Clinic--<http://www.augenklinik.usz.ch>
 
 &#x20;2\. 普通诊所
 
@@ -33,6 +41,20 @@ i. 就医
 &#x20;（4）就医前提前准备好个人信息、健康保险证件、个人身份证明和就诊需求。如果有些病情不太会描述，提前翻译好，方便沟通。
 
 &#x20;（5）若就诊时，保险卡还没有办下来，但已经在保险公司购买了相关保险。可以自己先垫付，让诊所工作人员给你费用单，之后交给保险公司即可。
+
+^
+
+\* 可以直接walk in无需预约的诊所
+
+Permanence Hauptbahnhof&#x20;
+
+地址：Bahnhofplatz 15, 8021 Zurich。营业时间：7:00-22:00
+
+Permanence Marktplatz Oerlikon
+
+地址：Querstrasse 15, 8050 Zürich。营业时间：Mon–Sat 7am–8pm / Sun 10am –5pm
+
+^
 
 &#x20;3\. 线上就医
 
