--- a/13机票.md
+++ b/13机票.md
@@ -22,4 +22,6 @@
 关于如何买到便宜的机票，说实在由于机票价格的大幅波动和不可预见性，我也不能给大家一个确切的答案，不过大体来说，同样日期，转机次数越多、耗时越长、出发和到达时间越晚的机票，价格越便宜。大家需要做的是结合自己的经济条件和对麻烦的接受程度，在这几个因素里面找到一个平衡点。从而买到适合自己机票（怎么感觉说了和没说似的）。当然上述规则并不绝对，偶尔你也能够找到又便宜又不麻烦的航班，这种时候就像我上面所说的那样，需要抓紧下手了，一般这种机票会被很快抢光。另外，避开8、9月份的高峰期，时间较早的机票价格也会相对便宜。但别忘了早过去的话同时也意味着要多一段时间生活在瑞士的高物价环境里了。
 还有一个值得一提的点是留学生票，不少航司会专门提供留学生票，这种机票除了价格上会有一定优惠之外，往往还会提供额外的托运行李额，这点对于需要带好几个箱子的同学可以说是量身定制了，因为额外购买行李额也是一笔不小的开销（不过有时候机场的工作人员看你是留学生也会免费帮你多托运一些额度，看运气）。目前各大购票网站上如果有留学生票可购买的话都会特地标明。如果你选择的航班没有留学生票选项的话，你也可以尝试直接给相应的航空公司打电话/发邮件，并提供你的录取通知书，询问该次航班是否可购买留学生票，如果有的话直接通过航空公司订购机票。
 
+**iiii**. **推荐航班**
+
 
