--- a/13机票.md
+++ b/13机票.md
@@ -3,7 +3,7 @@
 
 1\. 买机票一定要提前！提前！提前！
 
-目前来瑞士留学的中国留学生数量相比前几年有所增加，临近9月份开学季机票会非常紧张，价格也会经常波动，尽量在签证问题解决后马上把机票买好（不少同学会在签证办好之前就已经把机票买好了，可见提早购买的重要性）
+目前来瑞士留学的中国留学生数量相比前几年有所增加，临近9月份开学季机票会非常紧张，价格也会经常波动，关于到底要提前多久，我的建议是尽量在签证问题解决后马上把机票买好（不少同学会在签证办好之前就已经把机票买好了，可见提早购买的重要性）最晚最晚到八月份你也应该已经把机票确定下来了。买早了也许你会错过少量后续放出的廉价机票，但买晚了是会陷入很大的被动的。
 
 2\. 关于机票的出发和到达时间
 出发时间国内比较容易把握，可以随意一些。但是到达时间最好不要太晚，最理想的是当地时间上午或中午到达，这样还可以腾出一个下午的时间，趁着各种机构还没下班，先去办一些手续或者采购一些商品。最晚建议不要超过晚上8点到达，届时等你从机场走出来很多店铺已经关门了，公共交通班次也会减少，再加上苏黎世机场到城区还有一段不短的路程，到达时间太晚的话无论是找房子、和房东交接还是其他的一些落地事宜都会非常不方便。
