Update .topwrite/assets/image_1681406472805.png, .topwrite/assets/航班信息.png, 13机票.md

--- a/13机票.md
+++ b/13机票.md
@@ -21,7 +21,11 @@
 一般建议就近，结合国内城市间交通的开销选择出发地即可。四个出发地的机票在价格、耗时、转机次数等方面并没有什么特别明显的区别，一定要说有什么不同的话，广州和香港出发的航班基本都是在东南亚、阿拉伯半岛以及东欧转机，而北京和上海出发的航班有很多是在西欧转机（并没有什么大的影响）。不过两广地区的同学有条件的话最好去香港坐，选择会比广州出发多很多。
 关于如何买到便宜的机票，说实在由于机票价格的大幅波动和不可预见性，我也不能给大家一个确切的答案，不过大体来说，同样日期，转机次数越多、耗时越长、出发和到达时间越晚的机票，价格越便宜。大家需要做的是结合自己的经济条件和对麻烦的接受程度，在这几个因素里面找到一个平衡点。从而买到适合自己机票（怎么感觉说了和没说似的）。当然上述规则并不绝对，偶尔你也能够找到又便宜又不麻烦的航班，这种时候就像我上面所说的那样，需要抓紧下手了，一般这种机票会被很快抢光。另外，避开8、9月份的高峰期，时间较早的机票价格也会相对便宜。但别忘了早过去的话同时也意味着要多一段时间生活在瑞士的高物价环境里了。
 还有一个值得一提的点是留学生票，不少航司会专门提供留学生票，这种机票除了价格上会有一定优惠之外，往往还会提供额外的托运行李额，这点对于需要带好几个箱子的同学可以说是量身定制了，因为额外购买行李额也是一笔不小的开销（不过有时候机场的工作人员看你是留学生也会免费帮你多托运一些额度，看运气）。目前各大购票网站上如果有留学生票可购买的话都会特地标明。如果你选择的航班没有留学生票选项的话，你也可以尝试直接给相应的航空公司打电话/发邮件，并提供你的录取通知书，询问该次航班是否可购买留学生票，如果有的话直接通过航空公司订购机票。
+最后，查机票的软件建议使用Skyscanner，其相比于其他同类APP无论是选择范围，排序智能程度还是可操作性方面都要优秀许多，可以帮助你更高效地完成机票的选购。
 ^
 **iiii**. **推荐航班**
+
+注意：以下信息于2023年4月中旬基于Skyscanner及Flightware历史数据整理，机票时间均为2023年8月中下旬，请注意时效性；另外由于航班信息波动极大，以下推荐仅供参考，不保证等你买的时候还能买得到/还是一样的价格；最后，每个人的经济条件及对转机次数/耗时的接受程度不同，以下推荐并不一定适合所有人，请根据实际情况自行考虑选择航班
+![](.topwrite/assets/航班信息.png)
 
 
