--- a/13机票.md
+++ b/13机票.md
@@ -4,7 +4,7 @@
 
 1\. 买机票一定要提前！提前！提前！
 
-目前来瑞士留学的中国留学生数量相比前几年有所增加，临近9月份开学季机票会非常紧张，价格也会经常波动，关于到底要提前多久，我的建议是尽量在签证问题解决后马上把机票买好（不少同学会在签证办好之前就已经把机票买好了，可见提早购买的重要性）最晚最晚到八月份你也应该已经把机票确定下来了。买早了也许你会错过少量后续放出的廉价机票，但买晚了会陷入很大的被动。
+目前来瑞士留学的中国留学生数量相比前几年有所增加，临近9月份开学季机票会非常紧张，价格也会经常波动，关于到底要提前多久，我的建议是尽量在签证问题解决后马上把机票买好（有些同学甚至会在签证办好之前就已经把机票买好了，可见提早购买的重要性）最晚最晚到八月初你也应该已经把机票确定下来了。买早了也许你会错过少量后续放出的廉价机票，但买晚了会陷入很大的被动。
 
 2\. 机票的到达时间需要在签证生效日期范围里
 没错，所以我并不建议签证办好之前就买机票。一定要把签证生效的起始日期记清楚，不然到了机场发现签证还没生效，被海关请进小黑屋喝茶了就很尴尬了。
